# HackEuroStoxx

./: .gitignore  README.md  feature_engineering.py  gru copy.ipynb  gru.ipynb  pipeline.py  prepros.py  pyproject.toml  train.py
api/: README.md  main.py  pyproject.toml
api/api/: main.py
processing/: feature_engineering.py  pipeline.py  prepros.py
