[tool.poetry]
name = "hack-eurostoxx50"
version = "0.1.0"
description = ""
authors = ["Leonardo Acquaroli <leonardo.acquaroli00@gmail.com>", "Davide Matta <davidematta7@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.9"
google-cloud-aiplatform = "^1.25.0"
uvicorn = "^0.22.0"
fastapi = "^0.95.2"
pandas = "^1.1.5"
torch = "^2.3.0"
yfinance = "^0.2.38"
scikit-learn = "^1.4.2"
pandas-ta = "^0.3.14b"
optuna = "^3.6.1"

[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"